--- a/www/templates/produits.html
+++ b/www/templates/produits.html
@@ -1,5 +1,82 @@
-<ion-view view-title="Browse">
+<ion-view view-title="Produits">
+
+
   <ion-content>
-    
+
+
+    <div class="list  list-header ">
+
+      <label class = "item item-input item-select item-balanced">
+        <div class = "input-label">
+          Catégorie
+        </div>
+
+        <select>
+          <option>Option 1</option>
+          <option selected>Option 2</option>
+          <option>Option 3</option>
+        </select>
+      </label>
+
+      <label class = "item item-input item-select item-balanced ">
+        <div class = "input-label">
+          Type
+        </div>
+
+        <select>
+          <option>Option 1</option>
+          <option selected>Option 2</option>
+          <option>Option 3</option>
+        </select>
+      </label>
+
+    </div>
+
+    <div>
+
+
+      <ion-list>
+        <ion-item >
+          produit1,prix unitaire,remise
+        </ion-item>
+        <ion-item >
+          produit1,prix unitaire,remise
+        </ion-item>
+        <ion-item >
+          produit1,prix unitaire,remise
+        </ion-item>
+        <ion-item >
+          produit1,prix unitaire,remise
+        </ion-item>
+        <ion-item >
+          produit1,prix unitaire,remise
+        </ion-item>
+        <ion-item >
+          produit1,prix unitaire,remise
+        </ion-item>
+        <ion-item >
+          produit1,prix unitaire,remise
+        </ion-item>
+        <ion-item >
+          produit1,prix unitaire,remise
+        </ion-item>
+        <ion-item >
+          produit1,prix unitaire,remise
+        </ion-item>
+        <ion-item >
+          produit1,prix unitaire,remise
+        </ion-item>
+        <ion-item >
+          produit1,prix unitaire,remise
+        </ion-item>
+        <ion-item >
+          produit1,prix unitaire,remise
+        </ion-item>
+        <ion-item >
+          produit1,prix unitaire,remise
+        </ion-item>
+      </ion-list>
+
+    </div>
   </ion-content>
 </ion-view>
