--- a/www/templates/envoyerMessage.html
+++ b/www/templates/envoyerMessage.html
@@ -1,5 +1,36 @@
-<ion-view view-title="Envoyer MessageS">
+<ion-view view-title="Envoyer Message">
   <ion-content>
+    <div class="list  list-header ">
+
+      <label class = "item item-input item-select item-balanced">
+        <div class = "input-label">
+          Service :
+        </div>
+
+        <select>
+          <option>Service commercial</option>
+          <option selected>Service de vente</option>
+          <option>Service financier</option>
+        </select>
+      </label>
+
+
+    </div>
+
+    <div  class="list list-inset" >
+      <label class="item item-input ">
+      <textarea placeholder="Votre Message"></textarea>
+      </label>
+      <br>
+      <label >
+      <button  class="button button-balanced">
+        Envoyer le message
+      </button>
+      </label>
+
+    </div>
+
+
 
   </ion-content>
 </ion-view>
