--- a/www/templates/produits.html
+++ b/www/templates/produits.html
@@ -8,7 +8,7 @@
 
       <label class = "item item-input item-select item-balanced">
         <div class = "input-label">
-          Catégorie
+          Catégorie :
         </div>
 
         <select>
@@ -20,7 +20,7 @@
 
       <label class = "item item-input item-select item-balanced ">
         <div class = "input-label">
-          Type
+          Type :
         </div>
 
         <select>
@@ -32,12 +32,12 @@
 
     </div>
 
-    <div>
+    <div class="card">
 
 
       <ion-list>
-        <ion-item >
-          produit1,prix unitaire,remise
+        <ion-item href="#/menu/produits/{{1}}">
+          produit1,prix unitaire,disponibilité,remise
         </ion-item>
         <ion-item >
           produit1,prix unitaire,remise
