--- a/www/templates/mesCotations.html
+++ b/www/templates/mesCotations.html
@@ -1,6 +1,39 @@
-<ion-view view-title="Browse">
+<ion-view view-title="Cotations">
   <ion-content>
-    <h1>cotattions</h1>
-    <h1>cotattions</h1>
+    <label class = "item item-input item-select">
+      <div class = "input-label">
+        Categorie
+      </div>
+      <select>
+        <option>antidouleur</option>
+        <option selected>antibiotique</option>
+        <option>antidepresseur</option>
+      </select>
+    </label>
+    <label class = "item item-input item-select">
+      <div class = "input-label">
+        Type
+      </div>
+      <select>
+        <option>Vitamine </option>
+        <option selected>Minereaux </option>
+        <option>Sedatifs </option>
+        <option>injectable </option>
+      </select>
+    </label>
+    <label class = "item item-input item-select">
+      <div class = "input-label">
+        Poduits
+      </div>
+      <select>
+        <option> Clamoxyl </option>
+        <option selected>Exomile </option>
+        <option> Medizapin</option>
+        <option> Vitatine </option>
+      </select>
+    </label>
+
+
+    <ion-label > <h2>Cotations ...</h2>  </ion-label>
   </ion-content>
 </ion-view>
