--- a/www/templates/produitInfo.html
+++ b/www/templates/produitInfo.html
@@ -1,5 +1,55 @@
 <ion-view view-title="produit X">
   <ion-content>
+    <div class="list list-inset">
+      <label class="item">
+        <img src="img/photo.gif"  width="200" height="100" >
+      </label>
 
+      <label class="item item-input item-stacked-label">
+      <B>  <span class="input-label " >Référence et Nom : </span></B><br>
+        <textarea readonly style="border: 2px solid forestgreen;"  rows="2">reference et nom.</textarea>
+      </label>
+
+      <label class="item item-input item-stacked-label">
+        <B>  <span class="input-label " >Description : </span></B><br>
+        <textarea readonly style="border: 2px solid forestgreen;" rows="4" >Description ..........dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
+        ddddddddddddddddddddddddddddddddddddddddddddssssssssssssssssssssssssssssssssssssssssssss</textarea>
+      </label>
+
+
+      <label class="item item-input item-stacked-label">
+        <B>  <span class="input-label " >Prix unitaire  (MAD) : </span></B>
+        <label class="item-input">105</label>
+      </label>
+
+      <label class="item item-input item-stacked-label">
+        <B>  <span class="input-label " >Remise : </span></B>
+        <label class="item-input">15%</label>
+      </label>
+
+
+      <label class="item item-input item-stacked-label">
+        <B>  <span class="input-label " >Quantité Demandée : </span></B>
+        <input type="number" placeholder="00">
+      </label>
+
+      <label class="item item-input item-stacked-label">
+        <B>  <span class="input-label " >Somme : </span></B>
+        <label class="item-input" >165</label>
+      </label>
+
+      <label class="item item-input item-stacked-label">
+      <B>  <span class="input-label " >Date de reception voulue : </span></B>
+      <input type="date" placeholder="">
+    </label>
+
+      <label class="item item-input item-stacked-label">
+        <B>  <span class="input-label " >Passer la Commande : </span></B><br>
+        <button class="button button-balanced button-block">
+        Valider
+        </button>
+      </label>
+
+    </div>
   </ion-content>
 </ion-view>
