--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -1,5 +1,5 @@
 
-<ion-tabs class="tabs-icon-top tabs-color-active-positive">
+<ion-tabs class="tabs-balanced tabs-color-active-stable">
 
   <!-- chart commandes par mois Tab -->
   <ion-tab title="Commandes par mois"  href="#/tab/commandesParMois">
