--- a/www/templates/mesRemises.html
+++ b/www/templates/mesRemises.html
@@ -1,10 +1,15 @@
 <ion-view view-title="Browse">
-  <ion-content>
-   <ion-tabs >
-     <ion-tab title="Encours" >
-       <label></label>
+
+   <ion-tabs class="tabs-balanced tabs-color-active-stable" >
+     <!-- remises en cours -->
+     <ion-tab title="En cours"  href="#/menu/mesRemises/mesRemisesEncours" >
+       <ion-nav-view name="mesRemisesEncours"></ion-nav-view>
      </ion-tab>
 
+     <!-- Historique -->
+     <ion-tab title="Historique"  href="#/menu/mesRemises/mesRemisesHistorique">
+       <ion-nav-view name="mesRemisesHistorique"></ion-nav-view>
+     </ion-tab>
    </ion-tabs>
-  </ion-content>
+
 </ion-view>
