--- a/www/templates/mesRemisesEncours.html
+++ b/www/templates/mesRemisesEncours.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Mes remises encours">
-<ion-content class = "padding">
+<ion-content class = "padding" scroll="true" >
 
   <div class="list list-inset">
 
@@ -10,8 +10,12 @@
 
     <label class="item item-input item-stacked-label">
       <B>  <span class="input-label " >Remise par produit : </span></B><br>
-        <ion readonly style="border: 2px solid forestgreen;" rows="4" >Description ..........dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
-        ddddddddddddddddddddddddddddddddddddddddddddssssssssssssssssssssssssssssssssssssssssssss</ion>
+      <div class="row" style="border: 2px solid forestgreen;">
+        <div class="col">produit 1 </div>
+        <div class="col">30 %</div>
+      </div>
+
+      <!--<div class="gridStyle" ng-grid="gridOptions"></div>-->
     </label>
 
 
