--- a/www/templates/produits.html
+++ b/www/templates/produits.html
@@ -36,7 +36,7 @@
 
 
       <ion-list>
-        <ion-item href="#/menu/produits/{{1}}">
+        <ion-item href="#/produits/{{1}}">
           produit1,prix unitaire,disponibilité,remise
         </ion-item>
         <ion-item >
