--- a/www/templates/envoyerMessage.html
+++ b/www/templates/envoyerMessage.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Envoyer Message">
-  <ion-content>
+  <ion-content scroll="false">
     <div class="list  list-header ">
 
       <label class = "item item-input item-select item-balanced">
