--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -3,10 +3,13 @@ loaded from other parts of the application
 view-title is label of view can be displayed in nav bar-->
 
 
-<ion-view view-title="login" >
+<ion-view view-title="login"  hide-nav-bar="true" >
+  <ion-header-bar  class="bar-calm "  >
+    <h1 class="title">Login</h1>
 
+  </ion-header-bar>
 
-  <ion-content>
+  <ion-content scroll="false">
 
     <div class="list list-inset">
       <label class="item item-input">
@@ -16,7 +19,7 @@ view-title is label of view can be displayed in nav bar-->
         <input type="password" placeholder="Password" >  <!--ng-model="data.password"-->
       </label>
     </div>
-    <button class="button button-block button-calm" ng-click="login()" >Login</button>
+    <button class="button button-block button-calm" ng-click="login()"   style=" width: 50%; margin: 0 auto;">Login</button>
 
   </ion-content>
 
